# NoteScribe

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  setup.sh
htr_tg_bot/: hi.py
src/: config.json  handlers.py  helper_functions.py  hi.py  model_weights.md  recognition.py  run_model.py  segmentation.py  server.py  tokenizer.py  transforms.py
src/model/: config.json  helper_functions.py  recognition.py  segmentation.py  tokenizer.py  transforms.py
