[tool.poetry]
name = "htr-tg-bot"
version = "0.1.0"
description = "Telegram bot for handwritten text recognition"
authors = ["naereni <naereni12@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "htr_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.10.0"
numpy = "^1.22.3"
wheel = "^0.37.1"
ninja = "^1.10.2.3"
opencv-python = "^4.5.5.64"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
